Make strong typed result

--- a/WebApi/LogApi/LogApi.csproj
+++ b/WebApi/LogApi/LogApi.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="Models\LogItem.cs" />
     <Compile Include="Models\LogRequest.cs" />
+    <Compile Include="Models\LogResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -124,6 +125,9 @@
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\AzureDeploy.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
